--- a/style.css
+++ b/style.css
@@ -40,3 +40,8 @@ button {
     color: #fff;
     cursor: pointer;
 }
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
